--- a/Groupe4/index.html
+++ b/Groupe4/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,20 @@
     <link rel="stylesheet" href="style.css">
     <title>Accueil</title>
 </head>
+
 <body>
-    
+    <nav>
+        <ul>
+            <li><a href="index.html"></a>acceuil</li>
+            <li><a href="produits.html"></a>produits</li>
+            <li><a href="contact.html"></a>contact</li>
+            <li><a href="reservation.html"></a>reservation</li>
+        </ul>
+
+
+
+    </nav>
+
 </body>
+
 </html>
