--- a/Groupe4/index.html
+++ b/Groupe4/index.html
@@ -12,10 +12,10 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html"></a>acceuil</li>
-            <li><a href="produits.html"></a>produits</li>
-            <li><a href="contact.html"></a>contact</li>
-            <li><a href="reservation.html"></a>reservation</li>
+            <li><a href="index.html">acceuil</a></li>
+            <li><a href="produits.html">produits</a></li>
+            <li><a href="contact.html">contact</a></li>
+            <li><a href="reservation.html">reservation</a></li>
         </ul>
 
 
