ajout nav page produit

--- a/Groupe4/produits.html
+++ b/Groupe4/produits.html
@@ -8,6 +8,17 @@
     <title>Produits</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">acceuil</a></li>
+            <li><a href="produits.html">produits</a></li>
+            <li><a href="contact.html">contact</a></li>
+            <li><a href="reservation.html">reservation</a></li>
+        </ul>
+
+
+
+    </nav>
     
 </body>
 </html>
