--- a/Groupe4/contact.html
+++ b/Groupe4/contact.html
@@ -8,6 +8,14 @@
     <title>Contact</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">acceuil</a></li>
+            <li><a href="produits.html">produits</a></li>
+            <li><a href="contact.html">contact</a></li>
+            <li><a href="reservation.html">reservation</a></li>
+        </ul>
+        
     
 </body>
 </html>
