--- a/Groupe4/index.html
+++ b/Groupe4/index.html
@@ -12,15 +12,14 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">acceuil</a></li>
-            <li><a href="produits.html">produits</a></li>
-            <li><a href="contact.html">contact</a></li>
-            <li><a href="reservation.html">reservation</a></li>
+            <li class="item num1"><a href="index.html">acceuil</a></li>
+            <li class="item num2"><a href="produits.html">produits</a></li>
+            <li class="item num3"><a href="contact.html">contact</a></li>
+            <li class="item num4"><a href="reservation.html">reservation</a></li>
         </ul>
+</nav>
 
 
-
-    </nav>
 
 </body>
 
