--- a/Groupe4/contact.html
+++ b/Groupe4/contact.html
@@ -15,7 +15,7 @@
             <li><a href="contact.html">contact</a></li>
             <li><a href="reservation.html">reservation</a></li>
         </ul>
-        
-    
+
+    </nav>
 </body>
 </html>
