--- a/Groupe4/reservation.html
+++ b/Groupe4/reservation.html
@@ -7,6 +7,14 @@
     <title>Reservation</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">acceuil</a></li>
+            <li><a href="produits.html">produits</a></li>
+            <li><a href="contact.html">contact</a></li>
+            <li><a href="reservation.html">reservation</a></li>
+
+    </nav>
     
 </body>
 </html>
