liste des produits

--- a/Groupe4/produits.html
+++ b/Groupe4/produits.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Produits</title>
 </head>
+
 <body>
     <nav>
         <ul>
@@ -19,6 +21,33 @@
 
 
     </nav>
-    
+
+    <main>
+
+        <section class="Pizza">
+            <h1>Nos Pizza</h1>
+            <ul>
+                <li>La regina</li>
+                <li>La 4 fromages</li>
+                <li>La tartiflette</li>
+                <li>La Veggie</li>
+                <li>La Spécial du chef TARIK</li>
+            </ul>
+
+        </section>
+
+        <section class="Burger">
+            <h1>Nos Burgers</h1>
+            <ul>
+                <li>Big Mac</li>
+                <li>CBO</li>
+                <li>Veggie</li>
+            </ul>
+
+        </section>
+
+    </main>
+
 </body>
+
 </html>
