--- a/Groupe4/reservation.html
+++ b/Groupe4/reservation.html
@@ -16,5 +16,21 @@
 
     </nav>
     
+    <main>
+        <fieldset>
+            <form action="">
+                <label for="nom">nom</label>
+                <input type="text" name="nom" id="">
+                <label for="prenom">prenon</label>
+                <input type="prenom"><br> <br>
+                <label for="email">email</label>
+                <input type="email">
+                <label for="phone">phone</label>
+                <input type="phone">
+                <input type="submit">
+
+            </form>
+        </fieldset>
+    </main>
 </body>
 </html>
