fiche contact fini

--- a/Groupe4/contact.html
+++ b/Groupe4/contact.html
@@ -17,5 +17,51 @@
         </ul>
 
     </nav>
+
+<main>
+<section >
+<h1>Vous voulez vous faire livrer une pizza en moins de 30 min ?</h1>
+
+<li>Besoin de vous faire livrer rapidement ?</li><p> Applez nous au 01 82 56 95 vous commande sera pris en charge ou directement sur nos site dans l'onglet reservation </p>
+<li>Qui sommes nous ?</li><p> une entreprise de qualité "Rapidité, Qualité" nous represente</p>
+<li>Franchise</li><p> vous voulez savoir nos modalité pour vous faire franchiser contacter nous par email pizza@pizaa.fr</p>
+
+<br><br><br>
+<h2> rempliser notre formulaire de contact si une demande specifique </h2>
+
+<fieldset>
+    <label for="nom">Nom et prénom</label>
+    <input name="nom" type="text">
+
+    <textarea name="formulaire" id="" cols="30" rows="30" placeholder="Ecrivez ici"></textarea>
+    <button> <input type="button" value="submit"></button>
+
+
+
+
+
+
+</fieldset>
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</main>
 </body>
 </html>
