--- a/Groupe4/index.html
+++ b/Groupe4/index.html
@@ -18,7 +18,13 @@
             <li class="item num4"><a href="reservation.html">reservation</a></li>
         </ul>
 </nav>
+<main>
 
+
+
+
+    
+</main>
 
 
 </body>
