--- a/Groupe4/index.html
+++ b/Groupe4/index.html
@@ -19,6 +19,13 @@
         </ul>
 </nav>
 <main>
+    <h1>la bonne bouffe de la MAMA</h1>
+    <p>
+        bienvenue a la bonne bouffe de la MAMA, le meilleur restaurant de toute la france
+        une cuise ancestrale depuis 1789. <br>
+        n'hesiete pas a venir vous regaler au 189 paul vaillant couturier 93110 Rosny Sous Bois
+ </p>
+ 
 
 
 
